{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 215,
  "lineage": "a9e58d7c-f4c0-d441-e8ef-87b4bb7554ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:031445241408:loadbalancer/app/Sourcefuse-Project-alb/40a7d0db5007ead1",
            "arn_suffix": "app/Sourcefuse-Project-alb/40a7d0db5007ead1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Sourcefuse-Project-alb-1675623291.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:031445241408:loadbalancer/app/Sourcefuse-Project-alb/40a7d0db5007ead1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Sourcefuse-Project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b2f35fcb34e01012"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ece5b511c87ea88"
              },
              {
                "subnet_id": "subnet-041263a14b1bd90a0"
              }
            ],
            "subnets": [
              "subnet-01ece5b511c87ea88",
              "subnet-041263a14b1bd90a0"
            ],
            "tags": {
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-aws_alb-main"
            },
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-aws_alb-main",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "vpc_id": "vpc-0b1d1fec256b8ef05",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:031445241408:listener/app/Sourcefuse-Project-alb/40a7d0db5007ead1/9cada5c310874d85",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:031445241408:targetgroup/Sourcefuse-tg/f9ad90be3ea48d0e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:031445241408:listener/app/Sourcefuse-Project-alb/40a7d0db5007ead1/9cada5c310874d85",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:031445241408:loadbalancer/app/Sourcefuse-Project-alb/40a7d0db5007ead1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:031445241408:targetgroup/Sourcefuse-tg/f9ad90be3ea48d0e",
            "arn_suffix": "targetgroup/Sourcefuse-tg/f9ad90be3ea48d0e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:031445241408:targetgroup/Sourcefuse-tg/f9ad90be3ea48d0e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Sourcefuse-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-aws_alb-main"
            },
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-aws_alb-main",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b1d1fec256b8ef05"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031445241408:internet-gateway/igw-01d18bd15338a9025",
            "id": "igw-01d18bd15338a9025",
            "owner_id": "031445241408",
            "tags": {
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-aws_internet_gateway-main"
            },
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-aws_internet_gateway-main",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "vpc_id": "vpc-0b1d1fec256b8ef05"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031445241408:route-table/rtb-0540ff51f00157531",
            "id": "rtb-0540ff51f00157531",
            "owner_id": "031445241408",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d18bd15338a9025",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-aws_route_table-public"
            },
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-aws_route_table-public",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d1fec256b8ef05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067239983709c9e5b",
            "route_table_id": "rtb-0540ff51f00157531",
            "subnet_id": "subnet-041263a14b1bd90a0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031445241408:security-group/sg-0b2f35fcb34e01012",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2f35fcb34e01012",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "031445241408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d1fec256b8ef05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031445241408:security-group/sg-07bf058bdbeeeaaa7",
            "description": "Allow traffic to ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bf058bdbeeeaaa7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_service_sg",
            "name_prefix": "",
            "owner_id": "031445241408",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d1fec256b8ef05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031445241408:subnet/subnet-02c1c4a2ca0299e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c1c4a2ca0299e1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031445241408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-private-subnet"
            },
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-private-subnet",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "vpc_id": "vpc-0b1d1fec256b8ef05"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031445241408:subnet/subnet-041263a14b1bd90a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041263a14b1bd90a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031445241408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-public-subnet"
            },
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-public-subnet",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "vpc_id": "vpc-0b1d1fec256b8ef05"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031445241408:subnet/subnet-01ece5b511c87ea88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ece5b511c87ea88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031445241408",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-public-subnet_2"
            },
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-public-subnet_2",
              "Project": "Sourcefuse_Project_Paresh"
            },
            "vpc_id": "vpc-0b1d1fec256b8ef05"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031445241408:vpc/vpc-0b1d1fec256b8ef05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f53cdc419ef9f010",
            "default_route_table_id": "rtb-01d3f334ab8c665ed",
            "default_security_group_id": "sg-00207eb6b1ddf1967",
            "dhcp_options_id": "dopt-0bb4354999ba0f823",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1d1fec256b8ef05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d3f334ab8c665ed",
            "owner_id": "031445241408",
            "tags": {
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-vpc-main"
            },
            "tags_all": {
              "Automation": "Sourcefuse_Project",
              "Environment": "Assessment_Env",
              "Name": "Sourcefuse_Project_Paresh-Assessment_Env-vpc-main",
              "Project": "Sourcefuse_Project_Paresh"
            }
          }
        }
      ]
    }
  ]
}